--- a/cover.tex
+++ b/cover.tex
@@ -11,9 +11,10 @@
 \jurymember{1}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Présidente du jury}
 \jurymember{2}{Sof{\'{i}}a \textsc{Calero}}{Professeure, Eindhoven University of Technology}{Rapportrice}
 \jurymember{3}{Magali \textsc{Benoit}}{Directrice de Recherche, Université de Toulouse}{Rapportrice}
-\jurymember{4}{Johann \textsc{William}}{Expert simulation physique et Référent IA, Orano}{Membre invité}
-\jurymember{5}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Membre du jury}
-\jurymember{6}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
+\jurymember{4}{Johann \textsc{William}}{Responsable modélisation et IA, Orano }{Membre invité}
+\jurymember{5}{Isabelle \textsc{Hablot}}{Manager recherche et développement, Orano}{Représentante industrielle}
+\jurymember{6}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Directeur de thèse}
+\jurymember{7}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
 
 \frabstract{
 
