--- a/remerciements.tex
+++ b/remerciements.tex
@@ -14,21 +14,34 @@
 \begingroup
 \itshape
 
-Je souhaiterais tout d'abord adresser mes remerciements aux rapportrices de cette thèse, Sofia Calero et Magali Benoit d'avoir accepter de prendre le temps de lire, ce manuscrit de thèse et d'avoir 
-\todo{Jury}
-\todo{Examinateur}
+Je souhaiterais tout d'abord adresser mes remerciements aux rapportrices de cette thèse, Sof{\'{i}}a \textsc{Calero} et Magali Benoit d'avoir pris le temps de lire, commenter et évaluer mon manuscrit de thèse. Ensuite j'aimerais bien sûr remercier la présidente du jury NAME \textsc{SURNAME} d'avoir accepté de présider le jury ma soutenance de thèse. 
 
-\todo{Philippe Guilbaud}
+J'aimerais également remercier Johann \textsc{William} et Isabelle \textsc{Hablot} pour avoir accepté de participer au jury en tant que membre invité et représentant d'Orano; je suis plus particulièrement reconnaissant à Isabelle pour son implication dans l'encadrement de ma thèse en amenant un regard toujours bienveillant et pragmatique sur mes travaux.
 
-\todo{Isabelle Hablot}
+Je remercie également Philippe \textsc{Guilbaud} pour m'avoir toujours accueilli chalheureusement sur le site du CEA Marcoule, bien que je ne m'y suis pas rendu aussi souvent que prévu, situtation sanitaire l'obligeant. Merci également pour ton encadrement scientique éclairant mes travaux avec ton regard expérimenté de chimiste théoricien et de toujours avoir su me guider avec bienveillance dans mes interactions adsministratives avec le CEA (bien que ce ne soit pas ton rôle).
 
-\todo{François-Xavier Coudert}
+Je remercie sincèrement mon superviseur, François-Xavier \textsc{Coudert} qui m'a ouvert les portes de son bureau et qui m'y a accueilli pendant plus de trois ans maintenant. Tu as toujours su me conseiller avec bienveillance lors des moments de doutes avec des remarques toujours très constructives. Tes capacités d'encadrement de projets scientifiques n'éclipse pas ton aisance en  que tu exerces sans cesse que ce soit pour les projets des doctorants ou tes collaborations personnels comme en témoigne tes travaux. Ta passion pour la science et ta grande modestie m'ont baucoup inspiré et, je l'espère, m'inspireront encore après tout au long de ma carrière.
 
-Ces années n'auront pas été si riches sans la présence des membres de l'équipe:
+J'aimerais bien sûr remercier les doctorants que j'ai eu la chance de rencontrer avec qui on a passé de très bons moments au bureau ou à l'extérieur et grâce à qui ces trois années seront presque passées très vites :
+Nicolas \textsc{Castel} qui attaqué ses trois années de thèse avec moi, sans avoir vu nos visages pendant quasiment un an (ça faisait vraiment bizarre sans masque, haha), merci d'avoir été mon co-bureau mais aussi mon co-équipier de soirées/bars pendant la thèse ; 
+Wenke \textsc{Li} qui terminait sa dernière année de thèse et que je connaissais déjà depuis mon stage, merci pour ta bonne humeur, ta générosité et ton altruisme ;
+Maxime \textsc{Ducamp} qui entamait ses deux dernières années de thèse avec nous et dont la matinalité m'a toujours étonné (8h du matin tous les jours), j'essaie de m'inspirer mais je pense que je suis à une moyenne de 11h pour l'instant, merci pour les conseils administratifs pour la thèse (ça aide une personne qui a fait toute les démarches l'année d'avant) ;
+Lionel \textsc{Zoubritzky} qui a rejoint la grande famille des doctorants au début de ma deuxième année et dont les travaux de Master sur la topologie m'interpellais déjà, merci pour nos nombreuses discussions sur mes problèmes algorithmiques (tu es peut-être la seule personne que je n'ennuie pas avec ça, haha) ;
+Dune \textsc{André} qui nous a rejoints pour ma dernière année et que j'aurais aimé côtoyé un peu plus, merci pour ta bonne humeur et de me faire découvrir le septième art français pendant nos sorties ciné ;
+
+J'aimerais également remercier les post-doctorants avec qui j'ai pu discuter longuement lors des pauses déjeuner et café :
+Clément \textsc{Wespiser}
+Ambroise \textsc{De Izarra} 
+Luca \textsc{Brugnoli} 
+Arthur Hardiagon \textsc{Brugnoli} 
+
+Je remercie les anciens membres de l'équipe avec qui j'ai pu discuter pendant mon stage de Master avant de revenir en thèse :
+Elsa \textsc{Gaillac}
+Romain \textsc{Gaillac}
+Guillaume \textsc{Fraux}
+Siwar \textsc{Chibani}
 
 \todo{PSL}
-
-\todo{Lionel, algo}
 
 \todo{Dabeen, relecture}
 
@@ -81,7 +94,7 @@ Ces années n'auront pas été si riches sans la présence des membres de l'équ
 \begingroup
 \itshape
 
-Je souhaiterais tout d'abord adresser mes remerciements aux rapportrices de cette thèse, Sofia Calero et Magali Benoit pour le temps qu'elles ont accordés à cette thèse. \todo{Jury}
+I am very grateful for 
 \todo{Examinateur}
 
 \todo{Philippe Guilbaud}
