--- a/remerciements.tex
+++ b/remerciements.tex
@@ -1,4 +1,4 @@
-%!TEX root = A-web.tex
+%!TEX root = main.tex
 %!TeX spellcheck = fr-FR
 \begin{otherlanguage}{french}
 
@@ -14,7 +14,7 @@
 \begingroup
 \itshape
 
-Je souhaiterais tout d'abord adresser mes remerciements aux rapportrices de cette thèse, Sof{\'{i}}a \textsc{Calero} et Magali Benoit d'avoir pris le temps de lire, commenter et évaluer mon manuscrit de thèse. Ensuite j'aimerais bien sûr remercier la présidente du jury NAME \textsc{SURNAME} d'avoir accepté de présider le jury ma soutenance de thèse. 
+Je souhaiterais tout d'abord adresser mes remerciements aux rapportrices de cette thèse, Sof{\'{i}}a \textsc{Calero} et Magali Benoit d'avoir pris le temps de lire, commenter et évaluer mon manuscrit de thèse. J'adresse également mes plus sincères remerciements à la présidente du jury NAME \textsc{SURNAME} d'avoir pris le temps de présider le jury ma soutenance de thèse, malgré ses nombreuses obligations. 
 
 J'aimerais également remercier Johann \textsc{William} et Isabelle \textsc{Hablot} pour avoir accepté de participer au jury en tant que membre invité et représentant d'Orano; je suis plus particulièrement reconnaissant à Isabelle pour son implication dans l'encadrement de ma thèse en amenant un regard toujours bienveillant et pragmatique sur mes travaux.
 
@@ -48,10 +48,6 @@ Siwar \textsc{Chibani}
 \todo{gestionnaire CEA IRCP}
 
 \endgroup
-
-\clearpage
-\mbox{}
-\thispagestyle{empty}
 \clearpage
 
 %\ifweb
