--- a/Z-resume-fr.tex
+++ b/Z-resume-fr.tex
@@ -20,7 +20,7 @@
 
 \section*{Introduction}
 
-Les procédés industriels de séparation des gaz sont largement utilisés pour fournir des réactifs purifiés et des gaz inertes aux industries chimiques, sanitaires, agricoles et alimentaires pour les industries de la chimie, de la santé, de l'agriculture et de l'alimentation. Ils peuvent également être utilisés pour atténuer l'impact négatif de certaines activités industrielles sur l'environnement : dans les usines de production de béton ou d'acier, les émissions très problématiques de \ce{CO2} pourraient être piégées ; mais aussi dans les usines de retraitement des combustibles nucléaires, des composés radioactifs volatils peuvent être séparés des autres gaz. Différentes petites molécules comme le diazote, le dioxygène, le dioxyde de carbone, le dihydrogène, le méthane, le protoxyde d'azote ou les gaz rares sont ainsi séparées, purifiées puis stockées. La séparation xénon/krypton étudiée dans cette thèse est communément utilisée pour extraire ces gaz de l'atmosphère, mais l'industrie du nucléaire constitue une source bien plus abondante de xénon et de krypton.
+Les procédés industriels de séparation des gaz sont utilisés dans diverses industries, telles que la chimie, la santé, l'agriculture et l'alimentation, pour fournir des réactifs purifiés et des gaz inertes. Ces procédés sont également utilisés pour atténuer les effets négatifs de certaines activités industrielles sur l'environnement, comme la capture du dioxyde de carbone dans les usines de production de béton ou d'acier ou encore le piégeage de composés radioactifs volatils des usines de retraitement des combustibles nucléaires. Différentes petites molécules comme le diazote, le dioxygène, le dioxyde de carbone, le dihydrogène, le méthane, le protoxyde d'azote ou les gaz rares sont ainsi séparées, purifiées puis stockées. Cette thèse se concentre sur la séparation xénon/krypton communément utilisée pour extraire ces gaz de l'atmosphère, mais aussi de l'industrie du nucléaire qui constitue une source bien plus abondante de xénon et de krypton.
 
 Les procédés industriels de séparation Xe/Kr sont encore bien souvent basés sur la distillation cryogénique de l'air ambiant, ce qui requiert beaucoup d'énergie, une infrastructure complexe et un contrôle minutieux des risques. On peut par exemple évoquer les récents accidents d'exploitation d'usine de séparation de gaz (1997) qui ont été causés notamment par la réaction d'hydrocarbures de l'environnement avec l'oxygène liquéfié de l'usine. Pour éviter les problèmes de sécurité et de coûts importants, de nombreux chercheurs s'attèlent à développer des méthodes de séparation industrielle basées sur l'adsorption dans des matériaux nanoporeux. Ces matériaux nanoporeux sont constitués de pores à l'échelle nanoscopique qui offrent une large surface aux molécules pour y interagir puis s'adsorber. Des procédés industriels basés sur cette technologie existent déjà, ils utilisent notamment le \emph{pressure swing adsorption} (PSA) qui consiste à remplir les pores d'un mélange de gaz à haute pression, puis de récupérer un gaz ainsi purifié. En effet, les pores du matériau permettent l'adsorption préférentielle d'une molécule par rapport aux autres ce qui permet d'augmenter la teneur en une certaine molécule du mélange sortant. En répétant ce procédé, on peut ainsi séparer les différentes molécules d'un gaz. Dans le cadre de ma thèse, le xénon étant chimiquement proche du krypton, la purification par ce procédé reste un défi majeur. Certains prototypes industriels ont déjà été imaginés, mais la recherche d'un matériau pour effectuer au mieux cette tâche reste aujourd'hui une question ouverte. 
 
