--- a/cover.tex
+++ b/cover.tex
@@ -1,4 +1,4 @@
-%!TEX root = A-web.tex
+%!TEX root = main.tex
 % Nicolas Castel PhD thesis -- (C) 2023
 
 % information for cover pages
@@ -12,20 +12,20 @@
 \jurymember{2}{Sof{\'{i}}a \textsc{Calero}}{Professeure, Eindhoven University of Technology}{Rapportrice}
 \jurymember{3}{Magali \textsc{Benoit}}{Directrice de Recherche, Université de Toulouse}{Rapportrice}
 \jurymember{4}{Johann \textsc{William}}{Responsable modélisation et IA, Orano }{Membre invité}
-\jurymember{5}{Isabelle \textsc{Hablot}}{Manager recherche et développement, Orano}{Représentante industrielle}
-\jurymember{6}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Directeur de thèse}
+% \jurymember{5}{Isabelle \textsc{Hablot}}{Manager recherche et développement, Orano}{Représentante industrielle}
+\jurymember{6}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Encadrant de thèse}
 \jurymember{7}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
 
 \frabstract{
 
-Mes travaux portent sur la description microscopique de matériaux nanoporeux à différent niveaux de modélisation moléculaire, incluant des approches de criblage à haut débit et d’apprentissage statistique sur des bases de données de matériaux.
+Cette thèse vise à améliorer la séparation des gaz xénon et krypton en utilisant des matériaux nanoporeux. je développe des outils de description microscopique de ces matériaux, en utilisant différents niveaux de modélisation moléculaire. J'intègre des approches de criblage à haut débit et d'apprentissage statistique en exploitant des bases de données de matériaux pour évaluer rapidement leurs performances. Ces travaux contribuent à la recherche de solutions plus efficaces et durables pour la séparation de gaz dans diverses industries.
 }
 
 \enabstract{
 
-My work concerns the high-throughput screening of nanoporous materials (mostly but not only metal-organic frameworks) at different levels of molecular modeling, focusing on Xe/Kr separation as an application.
+This thesis aims to improve the separation of xenon and krypton gases using nanoporous materials. I am developing tools for the microscopic description of these materials, using various levels of molecular modeling. I integrate high-throughput screening approaches and statistical learning by leveraging material databases to rapidly evaluate their performance. These efforts contribute to the search for more efficient and sustainable solutions for gas separation in various industries.
 
 }
 
-\frkeywords{simulation moléculaire, matériaux nanoporeux, criblage haut-débit, adsorption, apprentissage statistique}
-\enkeywords{molecular simulation, nanoporous materials, high-throughput screening, adsorption, machine learning}
+\frkeywords{simulation moléculaire, séparation de gaz, adsorption, matériaux nanoporeux, criblage haut-débit, apprentissage statistique}
+\enkeywords{molecular simulation, gas separation, adsorption, nanoporous materials, high-throughput screening , machine learning}
