--- a/main.tex
+++ b/main.tex
@@ -59,6 +59,9 @@
 \DeclareSIUnit\angstrom{\text{\AA}}
 \newcommand{\revadd}[1]{{#1}}
 \newcommand{\revrem}[1]{{#1}}
+\usepackage{tcolorbox}
+\newtcbox{\codemd}{on line,boxrule=0pt,boxsep=0pt,colback=lightgray,top=1pt,bottom=1pt,left=1pt,right=1pt,arc=0pt,fontupper=\ttfamily}
+
 % Fix from https://tex.stackexchange.com/a/24278/225087
 %\newcommand{\angstrom}{\text{\normalfont\AA}}
 
