--- a/remerciements.tex
+++ b/remerciements.tex
@@ -14,38 +14,38 @@
 \begingroup
 \itshape
 
-Je souhaiterais tout d'abord adresser mes remerciements aux rapportrices de cette thèse, Sof{\'{i}}a \textsc{Calero} et Magali Benoit d'avoir pris le temps de lire, commenter et évaluer mon manuscrit de thèse. J'adresse également mes plus sincères remerciements à la présidente du jury NAME \textsc{SURNAME} d'avoir pris le temps de présider le jury ma soutenance de thèse, malgré ses nombreuses obligations. 
+Je tiens tout d'abord à adresser mes plus sincères remerciements aux rapportrices de cette thèse, Sof{\'{i}}a \textsc{Calero} et Magali \textsc{Benoit}, pour avoir pris le temps de lire, commenter et évaluer mon manuscrit de thèse. 
+% Leurs précieux commentaires et évaluations ont grandement enrichi mon travail. 
+J'adresse également mes plus sincères remerciements à la présidente du jury, NAME \textsc{SURNAME}, pour avoir présidé ma soutenance de thèse malgré ses nombreuses obligations.
 
-J'aimerais également remercier Johann \textsc{William} et Isabelle \textsc{Hablot} pour avoir accepté de participer au jury en tant que membre invité et représentant d'Orano; je suis plus particulièrement reconnaissant à Isabelle pour son implication dans l'encadrement de ma thèse en amenant un regard toujours bienveillant et pragmatique sur mes travaux.
+J'aimerais également remercier Johann \textsc{William} et Isabelle \textsc{Hablot} pour avoir accepté de faire partie du jury en tant que membres invités et représentants d'Orano. Je suis particulièrement reconnaissant envers Isabelle pour son implication dans l'encadrement de ma thèse, apportant toujours un regard bienveillant et pragmatique à mes travaux. 
 
-Je remercie également Philippe \textsc{Guilbaud} pour m'avoir toujours accueilli chalheureusement sur le site du CEA Marcoule, bien que je ne m'y suis pas rendu aussi souvent que prévu, situtation sanitaire l'obligeant. Merci également pour ton encadrement scientique éclairant mes travaux avec ton regard expérimenté de chimiste théoricien et de toujours avoir su me guider avec bienveillance dans mes interactions adsministratives avec le CEA (bien que ce ne soit pas ton rôle).
+Je remercie également Philippe \textsc{Guilbaud} pour m'avoir toujours accueilli chalheureusement sur le site du CEA Marcoule, même si les circonstances liées à la situation sanitaire ne m'ont pas permis de m'y rendre aussi souvent que prévu. Je suis également reconnaissant de ton encadrement scientifique éclairé de chimiste théoricien expérimenté, ainsi que pour tes conseils bienveillants dans mes démarches administratives avec le CEA, bien que ce ne soit pas ton rôle.
 
-Je remercie sincèrement mon superviseur, François-Xavier \textsc{Coudert} qui m'a ouvert les portes de son bureau et qui m'y a accueilli pendant plus de trois ans maintenant. Tu as toujours su me conseiller avec bienveillance lors des moments de doutes avec des remarques toujours très constructives. Tes capacités d'encadrement de projets scientifiques n'éclipse pas ton aisance en  que tu exerces sans cesse que ce soit pour les projets des doctorants ou tes collaborations personnels comme en témoigne tes travaux. Ta passion pour la science et ta grande modestie m'ont baucoup inspiré et, je l'espère, m'inspireront encore après tout au long de ma carrière.
+Je tiens à exprimer ma profonde gratitude envers mon superviseur, François-Xavier \textsc{Coudert}, qui m'a ouvert les portes de son bureau et m'y a accueilli pendant plus de trois ans. Ses conseils bienveillants lors des moments de doute, assortis de remarques constructives, ont été inestimables. Au-delà de son expertise dans l'encadrement de projets scientifiques, il m'a également inspiré par sa passion pour la science et sa grande modestie. Je suis convaincu que ces qualités continueront de me guider tout au long de ma carrière.
 
-J'aimerais bien sûr remercier les doctorants que j'ai eu la chance de rencontrer avec qui on a passé de très bons moments au bureau ou à l'extérieur et grâce à qui ces trois années seront presque passées très vites :
-Nicolas \textsc{Castel} qui attaqué ses trois années de thèse avec moi, sans avoir vu nos visages pendant quasiment un an (ça faisait vraiment bizarre sans masque, haha), merci d'avoir été mon co-bureau mais aussi mon co-équipier de soirées/bars pendant la thèse ; 
-Wenke \textsc{Li} qui terminait sa dernière année de thèse et que je connaissais déjà depuis mon stage, merci pour ta bonne humeur, ta générosité et ton altruisme ;
-Maxime \textsc{Ducamp} qui entamait ses deux dernières années de thèse avec nous et dont la matinalité m'a toujours étonné (8h du matin tous les jours), j'essaie de m'inspirer mais je pense que je suis à une moyenne de 11h pour l'instant, merci pour les conseils administratifs pour la thèse (ça aide une personne qui a fait toute les démarches l'année d'avant) ;
-Lionel \textsc{Zoubritzky} qui a rejoint la grande famille des doctorants au début de ma deuxième année et dont les travaux de Master sur la topologie m'interpellais déjà, merci pour nos nombreuses discussions sur mes problèmes algorithmiques (tu es peut-être la seule personne que je n'ennuie pas avec ça, haha) ;
-Dune \textsc{André} qui nous a rejoints pour ma dernière année et que j'aurais aimé côtoyé un peu plus, merci pour ta bonne humeur et de me faire découvrir le septième art français pendant nos sorties ciné ;
+Je souhaite également exprimer toute ma sympathie et ma reconnaissance envers les doctorants que j'ai eu la chance de rencontrer et avec qui j'ai partagé de précieux moments, que ce soit au bureau ou en dehors :
+Nicolas \textsc{Castel}, qui a embarqué sur son aventure doctorale en même temps que moi et avec qui j'ai partagé non seulement un bureau, mais aussi des soirées agréables.
+Wenke \textsc{Li}, qui terminait sa dernière année de thèse et que je connaissais déjà depuis mon stage, je te remercie pour ta bonne humeur, ta générosité et ton altruisme.
+Maxime \textsc{Ducamp}, qui entamait ses deux dernières années de thèse avec nous et dont l'habitude de se lever tôt m'a toujours impressionné (8h, c'est vraiment tôt). Merci pour ton aide pour les différentes démarches administratives pour la thèse (ton planning avant la soutenance nous a été bien utile avec Nicolas).
+Lionel \textsc{Zoubritzky}, qui a rejoint notre grande famille des doctorants au début de ma deuxième année et dont les travaux sur la topologie des matériaux nanoporous m'ont toujours intrigué. Merci pour nos nombreuses discussions sur mes problèmes algorithmiques, tu es peut-être la seule personne avec qui je peux en discuter sans t'ennuyer !
+Dune \textsc{André}, qui nous a rejoints pour ma dernière année et avec qui j'aurais aimé passer plus de temps. Merci pour ta bonne humeur et de m'avoir fait découvrir le septième art français, moi qui suis plutôt inculte dans ce domain.
 
-J'aimerais également remercier les post-doctorants avec qui j'ai pu discuter longuement lors des pauses déjeuner et café :
-Clément \textsc{Wespiser}
-Ambroise \textsc{De Izarra} 
-Luca \textsc{Brugnoli} 
-Arthur Hardiagon \textsc{Brugnoli} 
+J'aimerais également remercier les post-doctorants avec qui qui j'ai pu échanger lors des pauses déjeuner et café :
+Clément \textsc{Wespiser}, pour le verre que nous a payé à ton pot de départ avant que tu ne rejoignes le CEA.
+Ambroise \textsc{De Izarra}, pour nos discussions sur RASPA2. Bravo pour tes articles, ce n'était pas évident de coder dans RASPA2 !
+Luca \textsc{Brugnoli}, pour partager ta passion pour les livres et les films de science-fiction. 
+Arthur \textsc{Hardiagon}, pour l'ail des ours que tu m'as ramené de chez toi (le pesto était excellent) et pour les concerts brésiliens de ta fanfare que tu nous proposes à chaque fois (j'ai adoré).
 
-Je remercie les anciens membres de l'équipe avec qui j'ai pu discuter pendant mon stage de Master avant de revenir en thèse :
-Elsa \textsc{Gaillac}
-Romain \textsc{Gaillac}
-Guillaume \textsc{Fraux}
-Siwar \textsc{Chibani}
+Je tiens à remercier les anciens membres de l'équipe avec qui j'ai pu discuter lors de mes stages et qui m'ont donné envie de revenir pour ma thèse :
+Elsa \textsc{Perrin}, pour m'avoir initié à la simulation moléculaire et à l'utilisation de {\normalfont bash} sur {\normalfont Linux}. J'ai de bons souvenirs de ma première conférence de l'{\normalfont AFA} où tu as fait une superbe présentation.
+Romain \textsc{Gaillac}, pour avoir pris le temps de discuter de mon projet de thèse autour d'un verre.
+Guillaume \textsc{Fraux}, pour nos discussions scientifiques et ton aide avec {\normalfont chemfile} pendant mon stage.
+Siwar \textsc{Chibani}, pour ta bonne humeur et nos discussions sur les défis du parcours académique en recherche.
 
-\todo{PSL}
+\todo{Amis}
 
-\todo{Dabeen, relecture}
-
-\todo{gestionnaire CEA IRCP}
+Enfin, je voudrais exprimer ma profonde gratitude envers celle que j'aime, Dabeen \textsc{Oh}, pour son soutien constant. Même si les sciences ne sont pas ton domaine de prédilection, tu as toujours fait des efforts pour t'intéresser à mon travail. Je te remercie infiniment d'avoir pris le temps de comprendre, lire, relire et corriger ma thèse. Cette attention précieuse est une véritable preuve d'amour, et je t'en suis infiniment reconnaissant.
 
 \endgroup
 \clearpage
@@ -90,24 +90,38 @@ Siwar \textsc{Chibani}
 \begingroup
 \itshape
 
-I am very grateful for 
-\todo{Examinateur}
+First and foremost, I would like to express my gratitude to the rapporteurs of this thesis, Sof{\'{i}}a \textsc{Calero} and Magali \textsc{Benoit}, for taking the time to read, comment on, and evaluate my thesis manuscript. 
+% Their valuable feedback and assessments have greatly enriched my work. 
+I also extend my sincere thanks to the chair of the jury, NAME SURNAME, for presiding over my thesis defense despite their numerous obligations.
 
-\todo{Philippe Guilbaud}
+I would also like to express my appreciation to Johann \textsc{William} and Isabelle \textsc{Hablot} for accepting to be part of the jury as invited members and representatives of Orano. I am particularly grateful to Isabelle for her involvement in supervising my thesis, always providing a supportive and pragmatic perspective on my work.
 
-\todo{Isabelle Hablot}
+I would like to express my thanks to Philippe \textsc{Guilbaud} for warmly welcoming me to the CEA Marcoule site, even though I couldn't visit as often as planned due to the prevailing health situation. I am also grateful for his insightful scientific guidance as a theoretical chemist, and for his kind assistance with administrative matters related to the CEA, despite it not being his role.
 
-\todo{François-Xavier Coudert}
+I am sincerely grateful to my supervisor, François-Xavier \textsc{Coudert}, who opened the doors of his office to me and has welcomed me for over three years now. He has consistently provided me with benevolent advice during moments of doubt, always offering highly constructive feedback. His supervision of scientific projects is accompanied by his enthusiasm, and his continuous dedication is evident in his personal collaborations and research endeavors. His passion for science and his humility have greatly inspired me and will, I hope, continue to do so throughout my career.
 
-Ces années n'auront pas été si riches sans la présence des membres de l'équipe:
+I would also like to extend my gratitude to the fellow doctoral students whom I have had the pleasure of meeting and with whom I have shared enjoyable moments, both in and outside the office: 
+Nicolas \textsc{Castel}, who embarked on his three-year journey of doctoral research alongside me. Thank you for being my co-office mate and also my companion for post-work outings and drinks.
+Wenke \textsc{Li}, who was in the final year of her Ph.D. when I joined and whom I already knew from my internship. Thank you for your good humor, generosity, and altruism.
+Maxime \textsc{Ducamp}, , who was starting his last two years of Ph.D. with us and whose early mornings have always amazed me. I try to draw inspiration from it, but I think my average is still around 11 a.m. Thank you for the administrative advice regarding the Ph.D. (your planning for the thesis comitee was very useful).
+Lionel \textsc{Zoubritzky}, who joined our big family of doctoral students at the beginning of my second year and whose Master's work on the topology of nanoporous materials already intrigued me. Thank you for our numerous discussions on my algorithmic problems, you might be the only person I don't bore with that.
+Dune \textsc{André}, who joined us for my final year, and whom I would have liked to get to know better. Thank you for your good humor and for introducing me to French cinema during our movie outings, I should confess I am still a bit clueless.
 
-\todo{PSL}
+I would also like to thank the postdoctoral researchers with whom I had lengthy discussions during lunch and coffee breaks:
+Clément \textsc{Wespiser}, for the drinks and dinner we had before you joined CEA.
+Ambroise \textsc{De Izarra}, for our discussions on RASPA2 (congratulations on your papers; coding in RASPA2 was not easy).
+Luca \textsc{Brugnoli}, for sharing your passion for science fiction books and films.
+Arthur \textsc{Hardiagon}, for the wild garlic you brought from your home (the pesto was excellent) and the Brazilian concerts of your brass band (absolutely loved it). 
 
-\todo{Lionel, algo}
+I extend my gratitude to the former team members with whom I had discussions during my internships and who inspired me to return for my Ph.D.:
+Elsa \textsc{Perrin}, for introducing me to molecular simulation and {\normalfont bash} scripting on {\normalfont Linux}. I still have fond memories of my first {\normalfont AFA} conference where you gave a wonderful presentation. 
+Romain \textsc{Gaillac} for having a drink and discussing my Ph.D. project that I later pursued.
+Guillaume \textsc{Fraux}, for our scientific discussions and your help with {\normalfont chemfile} during my internship.
+Siwar \textsc{Chibani}, for our discussions on the intricacies of an academic career in research.
 
-\todo{Dabeen, relecture}
+\todo{Friends}
 
-\todo{gestionnaire CEA IRCP}
+Lastly, I would like to express my deepest gratitude to the one I love, Dabeen Oh, for her unwavering support. You have always made efforts to take an interest in what I do, even though science is not your strong suit. Thank you very much for taking the time to understand, read, review, and correct my thesis. It is a true testament of your love and I am immensely grateful.
 
 \endgroup
 
