--- a/cover.tex
+++ b/cover.tex
@@ -13,7 +13,7 @@
 \jurymember{3}{Magali \textsc{Benoit}}{Directrice de Recherche, Université de Toulouse}{Rapportrice}
 \jurymember{4}{Johann \textsc{William}}{Responsable modélisation et IA, Orano }{Membre invité}
 % \jurymember{5}{Isabelle \textsc{Hablot}}{Manager recherche et développement, Orano}{Représentante industrielle}
-\jurymember{6}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Encadrant de thèse}
+\jurymember{6}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Encadrant thèse}
 \jurymember{7}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
 
 \frabstract{
