--- a/cover.tex
+++ b/cover.tex
@@ -18,7 +18,9 @@
 
 \frabstract{
 
-Cette thèse vise à améliorer la séparation des gaz xénon et krypton en utilisant des matériaux nanoporeux. je développe des outils de description microscopique de ces matériaux, en utilisant différents niveaux de modélisation moléculaire. J'intègre des approches de criblage à haut débit et d'apprentissage statistique en exploitant des bases de données de matériaux pour évaluer rapidement leurs performances. Ces travaux contribuent à la recherche de solutions plus efficaces et durables pour la séparation de gaz dans diverses industries.
+Cette thèse vise à améliorer la séparation des gaz xénon et krypton en utilisant des matériaux nanoporeux. je développe des outils de description microscopique de ces matériaux, en utilisant différents niveaux de modélisation moléculaire. J'intègre des approches de criblage à haut débit et d'apprentissage statistique en exploitant des bases de données de matériaux pour évaluer rapidement leurs performances. 
+\todo{Pour cela thermo, transport, etc.}
+Ces travaux contribuent à la recherche de solutions plus efficaces et durables pour la séparation de gaz dans diverses industries.
 }
 
 \enabstract{
@@ -27,5 +29,6 @@ This thesis aims to improve the separation of xenon and krypton gases using nano
 
 }
 
-\frkeywords{simulation moléculaire, séparation de gaz, adsorption, matériaux nanoporeux, criblage haut-débit, apprentissage statistique}
-\enkeywords{molecular simulation, gas separation, adsorption, nanoporous materials, high-throughput screening , machine learning}
+\frkeywords{simulation moléculaire, séparation de gaz, adsorption, matériaux nanoporeux, \\\\ criblage haut-débit, apprentissage statistique}
+
+\enkeywords{molecular simulation, gas separation, adsorption, nanoposrous materials, \\\\high-throughput screening , machine learning}
